Removed tribes and players if they are deleted from received gamedata and added bulk insert/update support.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,10 @@ spring:
       hibernate:
         ddl-auto: validate
         dialect: org.hibernate.dialect.PostgreSQL94Dialect
+        jdbc:
+          batch_size: ${BATCH_SIZE:150}
+        order_insert: true
+        order_updates: true
 
   datasource:
     url: "jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB:tribalwars}?currentSchema=tribalwars_owner"
@@ -61,3 +65,9 @@ management:
   info:
     git:
       mode: full
+
+logging:
+  level:
+    org.hibernate.engine.jdbc.env.internal.LobCreatorBuilderImpl: ERROR
+
+BATCH_SIZE: 150
