--- a/pom.xml
+++ b/pom.xml
@@ -43,10 +43,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
-        <!--<dependency>-->
-        <!--<groupId>org.springframework</groupId>-->
-        <!--<artifactId>spring-webmvc</artifactId>-->
-        <!--</dependency>-->
         <dependency>
             <groupId>com.fasterxml.jackson.module</groupId>
             <artifactId>jackson-module-kotlin</artifactId>
@@ -71,17 +67,6 @@
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
         </dependency>
-        <!--<dependency>-->
-        <!--<groupId>org.springframework.boot</groupId>-->
-        <!--<artifactId>spring-boot-starter-SyncWorldData</artifactId>-->
-        <!--<scope>SyncWorldData</scope>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-        <!--<groupId>com.h2database</groupId>-->
-        <!--<artifactId>h2</artifactId>-->
-        <!--<scope>SyncWorldData</scope>-->
-        <!--</dependency>-->
-
 
         <!-- Documentation -->
         <dependency>
@@ -104,37 +89,14 @@
             <artifactId>jaxb-api</artifactId>
             <version>2.1</version>
         </dependency>
-
-        <!--<dependency>-->
-        <!--<groupId>org.jetbrains.kotlin</groupId>-->
-        <!--<artifactId>kotlin-SyncWorldData-junit</artifactId>-->
-        <!--<version>${kotlin.version}</version>-->
-        <!--<scope>SyncWorldData</scope>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-        <!--<groupId>com.vaadin.external.google</groupId>-->
-        <!--<artifactId>android-json</artifactId>-->
-        <!--<version>0.0.20131108.vaadin1</version>-->
-        <!--</dependency>-->
-
-
-        <!--<dependency>-->
-        <!--<groupId>io.micrometer</groupId>-->
-        <!--<artifactId>micrometer-core</artifactId>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-        <!--<groupId>io.micrometer</groupId>-->
-        <!--<artifactId>micrometer-registry-prometheus</artifactId>-->
-        <!--</dependency>-->
-
-        <!--<dependency>-->
-        <!--<groupId>com.google.code.gson</groupId>-->
-        <!--<artifactId>gson</artifactId>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-        <!--<groupId>org.apache.commons</groupId>-->
-        <!--<artifactId>commons-lang3</artifactId>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
@@ -238,32 +200,32 @@
                     </execution>
                 </executions>
             </plugin>
-            <!--<plugin>-->
-            <!--<groupId>pl.project13.maven</groupId>-->
-            <!--<artifactId>git-commit-id-plugin</artifactId>-->
-            <!--<version>${maven-git-commit-id-plugin.version}</version>-->
-            <!--<executions>-->
-            <!--<execution>-->
-            <!--<id>get-the-git-infos</id>-->
-            <!--<goals>-->
-            <!--<goal>revision</goal>-->
-            <!--</goals>-->
-            <!--</execution>-->
-            <!--</executions>-->
-            <!--<configuration>-->
-            <!--<dotGitDirectory>${project.basedir}/../.git</dotGitDirectory>-->
-            <!--<generateGitPropertiesFile>true</generateGitPropertiesFile>-->
-            <!--<failOnNoGitDirectory>true</failOnNoGitDirectory>-->
-            <!--<includeOnlyProperties>-->
-            <!--<includeOnlyProperty>git.branch</includeOnlyProperty>-->
-            <!--<includeOnlyProperty>git.build.time</includeOnlyProperty>-->
-            <!--<includeOnlyProperty>git.build.version</includeOnlyProperty>-->
-            <!--<includeOnlyProperty>^git.commit.id$</includeOnlyProperty>-->
-            <!--<includeOnlyProperty>git.commit.time</includeOnlyProperty>-->
-            <!--<includeOnlyProperty>git.tags</includeOnlyProperty>-->
-            <!--</includeOnlyProperties>-->
-            <!--</configuration>-->
-            <!--</plugin>-->
+            <plugin>
+                <groupId>pl.project13.maven</groupId>
+                <artifactId>git-commit-id-plugin</artifactId>
+                <version>${maven-git-commit-id-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <id>get-the-git-infos</id>
+                        <goals>
+                            <goal>revision</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <dotGitDirectory>${project.basedir}/../.git</dotGitDirectory>
+                    <generateGitPropertiesFile>true</generateGitPropertiesFile>
+                    <failOnNoGitDirectory>true</failOnNoGitDirectory>
+                    <includeOnlyProperties>
+                        <includeOnlyProperty>git.branch</includeOnlyProperty>
+                        <includeOnlyProperty>git.build.time</includeOnlyProperty>
+                        <includeOnlyProperty>git.build.version</includeOnlyProperty>
+                        <includeOnlyProperty>^git.commit.id$</includeOnlyProperty>
+                        <includeOnlyProperty>git.commit.time</includeOnlyProperty>
+                        <includeOnlyProperty>git.tags</includeOnlyProperty>
+                    </includeOnlyProperties>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
