--- a/pom.xml
+++ b/pom.xml
@@ -213,7 +213,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <dotGitDirectory>${project.basedir}/../.git</dotGitDirectory>
+                    <dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
                     <generateGitPropertiesFile>true</generateGitPropertiesFile>
                     <failOnNoGitDirectory>true</failOnNoGitDirectory>
                     <includeOnlyProperties>
