--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8080
+  port: 8082
   error:
     whitelabel:
       enabled: false
@@ -11,10 +11,6 @@ spring:
       hibernate:
         ddl-auto: validate
         dialect: org.hibernate.dialect.PostgreSQL94Dialect
-        jdbc:
-          batch_size: ${BATCH_SIZE:150}
-        order_insert: true
-        order_updates: true
 
   datasource:
     url: "jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB:tribalwars}?currentSchema=tribalwars_owner"
@@ -23,12 +19,6 @@ spring:
     hikari:
       connection-timeout: ${DB_CONNECTION_TIMEOUT:60000}
       maximum-pool-size: ${DB_MAX_POOL_SIZE:5}
-
-  flyway:
-    url: ${spring.datasource.url}
-    user:  ${FLYWAY_USER:tribalwars_owner}
-    password: ${FLYWAY_PASSWORD:tribalwars_owner}
-    table: schema_version
 
   jackson:
     serialization:
@@ -69,3 +59,7 @@ management:
 logging:
   level:
     org.hibernate.engine.jdbc.env.internal.LobCreatorBuilderImpl: ERROR
+
+graphiql:
+  subscriptions:
+    timeout: 30000
